--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #5d708100;
     background-color: #ffffff;
   }
   a:hover {
@@ -67,4 +67,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
 
