--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  --borderRadius: 10px;
+  --shadow-2: 0 2px 4px rgba(0, 0, 0, 0.2);
+  --small-text: 20px;
+  --letterSpacing: 2px
 }
 
 .logo {
@@ -45,4 +49,29 @@
   background-color: red;
   color: yellow;
   
+}
+
+.form {
+  width: 90vw;
+  max-width: var(--fixed-width);
+  background: var(--white);
+  border-radius: var(--borderRadius);
+  box-shadow: var(--shadow-2);
+  padding: 2rem 2.5rem;
+  margin: 3rem auto;
+}
+
+.form-label {
+  display: block;
+  font-size: var(--small-text);
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+  letter-spacing: var(--letterSpacing);
+}
+
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  border-radius: var(--borderRadius);
 }
